--- a/resources/styles/main.css
+++ b/resources/styles/main.css
@@ -15,3 +15,59 @@
 }
 
 /* CSS */
+/* Main */
+body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#width_container {
+    width: 736px;
+}
+/* Header */
+#headline {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+h1 {
+    padding: 0px 50px 0px 50px;
+    margin: 42px 0px 42px 0px;
+    font-size: 36px;
+    font-family: 'Poppins Semibold';
+    font-weight: 600;
+    text-align: center;
+}
+#separator {
+    width: 180px;
+    height: 16px;
+    margin-bottom: 42px;
+}
+/* Articles */
+article {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 52px;
+}
+.art_img {
+    border-radius: 15px;
+    width: 160px;
+    height: 160px;
+    
+}
+.art_headline {
+    margin-bottom: 16px;
+    padding: 0px;
+    font-size: 20px;
+    font-family: 'Poppins Semibold';
+    font-weight: 600;
+    margin-left: 60px;
+}
+.art_date {
+    font-size: 14px;
+    font-family: 'Poppins Medium';
+    font-weight: 500;
+    color: #4D5562;
+    margin-left: 60px;
+}
