--- a/resources/styles/main.css
+++ b/resources/styles/main.css
@@ -78,10 +78,23 @@ article {
     margin: 0px 0px 0px 60px;
 }
 /* Media Queries */
-@media (max-width: 430px) {
+@media (max-width: 1024px) {
+    h1 {
+        padding: 0px 25px 0px 25px;
+    }
+}
+@media (max-width: 736px) {
     article {
         flex-direction: column;
         align-items: flex-start;
+        margin-left: 25px;
+        margin-right: 25px;
+    }
+    .art_headline {
+        margin: 16px 0px 16px 0px;
+    }
+    .art_date {
+        margin: 16px 0px 0px 0px;
     }
     #width_container {
         width: auto;
